Add /api/v1/custom_emojis endpoint
